this is third version

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1> This is heading </h1>
     <img src="unknown.com" alt="source"> 
     <p> hello world </p>
-    <p> hello how are you </p>
+    <p> hello how are</p>
+    <img src="hello.com" alt="hello" >
 <body>
 </html>
